jvm memory flags for container added